# curse-browser

./: Cargo.toml  README.md
data/: test.html
src/: css.rs  dom.rs  html.rs  main.rs
src/html/: types.rs
