[package]
name = "web_browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { git = "https://github.com/gyscos/cursive" }
html5ever = "0.29"
scraper = "0.20.0"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
reqwest = "0.12"
cssparser = "0.34"

[[bin]]
name = "web_browser"
path = "src/main.rs"
